<resources>
    <string name="app_name">ChiperReddit</string>

    <string name="tag_offline">Offline</string>
    <string name="tag_online">Online</string>
    <string name="subscribers_lbl">subscribers</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="url">url</string>
    <string name="over_18">Over 18</string>
    <string name="language">Language</string>
    <string name="number_of_subscribers">Number of subscribers</string>
    <string name="description">Description</string>
    <string name="visit">More</string>
    <string name="reddit">Reddit</string>
    <string name="yes_option">YES</string>
    <string name="no_option">NO</string>
    <string name="check_your_connection_and_try_again">Check your connection and try again</string>
</resources>
