<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".view.subreddit.SubRedditDetailFragment">


    <ImageView
        android:id="@+id/community_icon_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/display_name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="@style/Title"
        android:layout_toEndOf="@id/community_icon_iv"
        android:text="@string/name" />

    <TextView
        android:id="@+id/display_name_tv"
        android:layout_width="wrap_content"
        style="@style/SubTitle"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/community_icon_iv"
        android:layout_below="@id/display_name_lbl"
         />

    <TextView
        android:id="@+id/url_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:layout_below="@id/display_name_tv"
        android:layout_toEndOf="@id/community_icon_iv"
        android:text="@string/url" />

    <TextView
        android:id="@+id/url_tv"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_lbl"
        android:layout_toEndOf="@id/community_icon_iv"
         />

    <TextView
        android:id="@+id/over18_lbl"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_tv"
        android:text="@string/over_18" />

    <TextView
        android:id="@+id/over18_tv"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/over18_lbl"
         />

    <TextView
        android:id="@+id/lang_lbl"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/over18_tv"
        android:layout_alignParentStart="true"
        android:text="@string/language" />

    <TextView
        android:id="@+id/lang_tv"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lang_lbl"
        />

    <TextView
        android:id="@+id/subscribers_lbl"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lang_tv"
        android:layout_alignParentStart="true"
        android:text="@string/number_of_subscribers" />

    <TextView
        android:id="@+id/subscribers_tv"
        android:layout_width="wrap_content"
        style="@style/SubTitle"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/subscribers_lbl" />

    <TextView
        android:id="@+id/description_lbl"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subscribers_tv"
        android:layout_alignParentStart="true"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="match_parent"
        style="@style/SubTitle"
        android:layout_below="@id/description_lbl"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:lines="5" />

    <Button
        android:id="@+id/go_to_btn"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_tv"
        android:layout_alignParentStart="true"
        android:text="@string/visit"/>


</RelativeLayout>